--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,6 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap');
+
 :root {
   --max-width: 1440px;
   --foreground-rgb: 0, 0, 0;
@@ -5,12 +8,14 @@
   --bgWeather-rgb: 240, 235, 254, 1;
   --rowInfo-rgb: 81, 21, 247, 1;
   --border-rgb: 229, 229, 229, 1;
+  --font-family: 'Lato', sans-serif;
 }
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: var(--font-family);
 }
 
 html,
